test/testdata/classes/methods/properties/getter_too_many_params_error.lox
class Foo {
    // error: property getter cannot have parameters
    get bar(x, y) {
        _ = x;
        _ = y;
    }
}

_ = Foo; // suppress unused declaration error
